[package]
name = "vortex-router"
version = "0.1.0"
edition = "2021"

[dependencies]
pingora = { version = "0.3.0", features = ["proxy"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
tonic = "0.12" 
prost = "0.12"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
# Match the tonic version
tonic-build = "0.12" 

[patch.crates-io]
sfv = { version = "0.10.4" }
